tags/2013-08-29_cppreference/Archive/b9a81fa93049d79edd0fced0f5f3ebd3-5bfb4a3ecda91a191e93557cbeaa6247/output
+ g++-4.8 -std=c++1y -O3 -Wno-missing-field-initializers -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:19:12: error: ‘Three’ is not a member of ‘B’
 A::c meh = B::Three; //fails because only en was brought into B
            ^
main.cpp:19:12: note: suggested alternative:
main.cpp:7:13: note:   ‘Three’
     enum c {Three};
             ^
